<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="12dp"
    tools:context=".ui.GenerateInvoiceFragment">

    <TextView
        android:id="@+id/customerName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:ellipsize="end"
        android:textSize="20sp"
        android:padding="4dp"
        tools:text="Alexander Stanley Butcher"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/customerAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:ellipsize="end"
        android:textSize="20sp"
        android:padding="4dp"
        tools:text="69 HZS, Unknown Street, Neverfoundland"
        app:layout_constraintTop_toBottomOf="@id/customerName"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/amountInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/services"
        android:padding="4dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        app:layout_constraintTop_toBottomOf="@id/customerAddress">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"/>
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/taxesApplicable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/taxes_applicable"
        android:padding="4dp"
        app:layout_constraintTop_toBottomOf="@id/amountInputLayout"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/setRateLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tax_rates"
        android:textStyle="bold"
        android:textSize="22sp"
        android:gravity="center"
        android:padding="4dp"
        app:layout_constraintTop_toBottomOf="@id/taxesApplicable"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/cgstInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/cgst"
        android:layout_margin="4dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintTop_toBottomOf="@id/setRateLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/sgstInputLayout">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/sgstInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/sgst"
        android:layout_margin="4dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintTop_toBottomOf="@id/setRateLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/cgstInputLayout">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/overviewLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="22sp"
        android:gravity="center"
        android:text="@string/overview"
        app:layout_constraintTop_toBottomOf="@id/cgstInputLayout"
        android:padding="8dp"/>

    <TextView
        android:id="@+id/overview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/overviewLabel"
        app:layout_constraintBottom_toTopOf="@id/generateInvoiceBtn"
        android:padding="8dp"
        android:gravity="center"
        android:layout_margin="8dp"/>

    <Button
        android:id="@+id/generateInvoiceBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/generate_invoice"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>